--- a/www/static/report.css
+++ b/www/static/report.css
@@ -1,1 +1,11 @@
-# Copyright (c) 2012 Rich Porter - see LICENSE for further details
+/* Copyright (c) 2012 Rich Porter - see LICENSE for further details */
+
+   table       { border-collapse : collapse ; border: 2px solid black ; font-family : sans-serif ; font-size : 12px }
+   thead       { background-color: #999 ; padding : 0 ; border: 2px solid black ; font-weight: bold; text-transform: capitalize ; text-align : center }
+   tfoot       { background-color: #ddd ; padding : 0 ; border: 2px solid black ; font-weight: bold; text-transform: capitalize }
+   th          { border: 2px solid black }
+   tr:hover    { background-color : #ddd }
+   td          { border: 1px solid black ; text-align : center }
+   td.pass     { background-color : #8f8 }
+   td.fail     { background-color : #f88 }
+   td.running  { background-color : #88f }
