--- a/www/static/report.css
+++ b/www/static/report.css
@@ -1,4 +1,5 @@
 /* Copyright (c) 2012 Rich Porter - see LICENSE for further details */
+   p  { white-space : pre; }
 
    table       { width : 100%; border-collapse : collapse ; border: 2px solid black ; font-family : sans-serif ; font-size : 12px }
    thead       { background-color: #999 ; padding : 0 ; border: 2px solid black ; font-weight: bold; text-transform: capitalize ; text-align : center }
@@ -9,3 +10,6 @@
    td.pass     { background-color : #8f8 }
    td.fail     { background-color : #f88 }
    td.running  { background-color : #88f }
+
+   iframe.tab  { width : 100%; height : 100%; overflow-y : scroll; }
+   code.log    { white-space : pre; }
