update copyright date

--- a/www/static/report.css
+++ b/www/static/report.css
@@ -1,4 +1,4 @@
-/* Copyright (c) 2012 Rich Porter - see LICENSE for further details */
+/* Copyright (c) 2012, 2013 Rich Porter - see LICENSE for further details */
    p  { white-space : pre; }
 
    table       { width : 100%; border-collapse : collapse ; border: 2px solid black ; font-family : sans-serif ; font-size : 12px }
