--- a/www/static/report.css
+++ b/www/static/report.css
@@ -11,6 +11,9 @@
    td.FAIL     { background-color : #f88 }
    td.RUNNING  { background-color : #88f }
 
+   span.PASS   { display : inline-block; background-color : #8f8 }
+   span.FAIL   { display : inline-block; background-color : #f88 }
+
    div.tab     { height: 600px; overflow: auto; position : relative }
    code        { display: block; white-space : pre }
    code.INT_DEBUG   { color : #888 }
