--- a/www/static/report.css
+++ b/www/static/report.css
@@ -19,6 +19,7 @@
    result other { background-color : #88f }
 
    div.tab     { height: 600px; overflow: auto; position : relative }
+   a.icon      { padding : 0 ! important }
    code        { display: block; white-space : pre }
    code.INT_DEBUG   { color : #888 }
    code.DEBUG       { color : #aaa }
