--- a/www/static/report.css
+++ b/www/static/report.css
@@ -77,7 +77,7 @@
    time       { display : none }
    time.rel   { width : 6em; }
    ident      { display : none }
-   div.widget { position : absolute; float : right ; right : 15px}
+   div.widget { position : absolute; float : right ; right : 15px ; z-index : 50}
    .example-highlight { background:#FF9 }
 
    div.explorer { width : 20% ; float : left  }
