--- a/www/static/report.css
+++ b/www/static/report.css
@@ -11,6 +11,11 @@
    td.FAIL     { background-color : #f88 }
    td.RUNNING  { background-color : #88f }
 
+   td.cvg-cvg    { background-color: #9cf }
+   td.cvg-both   { background-color: #fcf }
+   td.cvg-master { background-color: #ff9 }
+   td.cvg-none   { background-color: #ccc }
+
    span.PASS   { display : inline-block; background-color : #8f8 }
    span.FAIL   { display : inline-block; background-color : #f88 }
 
