--- a/www/static/report.css
+++ b/www/static/report.css
@@ -47,10 +47,10 @@
 	text-decoration:none }
    a.popup:hover {z-index:25; background-color : #ddd}
    a.popup span  {display: none; font-size : 10pt}
-   a.popup:hover span { /*DISPLAYS ONLY ON HOVER*/
+   a.popup:hover span {
 	display:block;
 	position:absolute;
-	top:2em; left:0; width : 20em;
+	top:2em; left:0; width : inherit;
 	padding:.3em;
 	border:2px outset #BBB;
 	color:#000; background:#FF9}
@@ -153,7 +153,7 @@
       -webkit-transform: rotate(-90.0deg);  /* Saf3.1+, Chrome */
    }
    table.bucket td          { width : 4em; }
-   div.cvg-point-pane a.popup span {width : 8em; }
+   table.alias th, td       { width : 4em; }
    div.cvg-point-pane table.heat-map { border : none; width : auto; margin-left : auto; margin-right : auto; margin-top : 20px }
    div.cvg-point-pane table.heat-map tr:hover { background-color : none }
 
